--- a/debian/control
+++ b/debian/control
@@ -5,10 +5,10 @@ Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
                extra-cmake-modules (>= 5.12.0~),
-               libboost-dev,
-               libkf5coreaddons-dev,
-               libkf5kdelibs4support-dev,
-               libkf5mime-dev,
+               libboost-dev (>= 1.34.0~),
+               libkf5coreaddons-dev (>= 5.12.0~),
+               libkf5kdelibs4support-dev (>= 5.12.0~),
+               libkf5mime-dev (>= 4.79.0~),
                libsasl2-dev,
                pkg-kde-tools (>> 0.15.15),
                qtbase5-dev
@@ -22,10 +22,10 @@ Package: libkf5imap-dev
 Section: libdevel
 Architecture: any
 Multi-Arch: foreign
-Depends: libboost-dev,
-         libkf5coreaddons-dev,
+Depends: libboost-dev (>= 1.34.0~),
+         libkf5coreaddons-dev (>= 5.12.0~),
          libkf5imap5 (= ${binary:Version}),
-         libkf5mime-dev,
+         libkf5mime-dev (>= 4.79.0~),
          libsasl2-dev,
          ${misc:Depends}
 Description: library for handling IMAP data - development files
