--- a/debian/control
+++ b/debian/control
@@ -27,6 +27,7 @@ Depends: libboost-dev (>= 1.34.0~),
          libkf5imap5 (= ${binary:Version}),
          libkf5mime-dev (>= 4.79.0~),
          libsasl2-dev,
+         kio-dev,
          ${misc:Depends}
 Description: library for handling IMAP data - development files
  This library provides an API for handling data received from IMAP services.
