--- a/debian/control
+++ b/debian/control
@@ -17,8 +17,8 @@ Build-Depends: cmake (>= 2.8.12~),
                qtbase5-dev
 Standards-Version: 3.9.6
 Homepage: https://projects.kde.org/projects/kde/pim/kimap
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/applications/kimap.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/applications/kimap.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kimap.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/kimap.git
 
 Package: libkf5imap-dev
 Section: libdevel
