--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
                extra-cmake-modules (>= 5.23.0~),
-               kio-dev (>= 5.23.0~),
+               libkf5kio-dev (>= 5.23.0~),
                libboost-dev (>= 1.34.0~),
                libkf5coreaddons-dev (>= 5.23.0~),
                libkf5i18n-dev (>= 5.23.0~),
