--- a/debian/control
+++ b/debian/control
@@ -6,15 +6,15 @@ Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
                extra-cmake-modules (>= 5.23.0~),
-               libkf5kio-dev (>= 5.23.0~),
                libboost-dev (>= 1.34.0~),
                libkf5coreaddons-dev (>= 5.23.0~),
                libkf5i18n-dev (>= 5.23.0~),
                libkf5kdelibs4support-dev (>= 5.12.0~),
+               libkf5kio-dev (>= 5.23.0~),
                libkf5mime-dev (>= 15.12~),
                libsasl2-dev,
                pkg-kde-tools (>> 0.15.15),
-               qtbase5-dev
+               qtbase5-dev,
 Standards-Version: 4.0.1
 Homepage: https://projects.kde.org/projects/kde/pim/kimap
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kimap.git
@@ -30,7 +30,7 @@ Depends: kio-dev (>= 5.23.0~),
          libkf5imap5 (= ${binary:Version}),
          libkf5mime-dev (>= 5.3.1~),
          libsasl2-dev,
-         ${misc:Depends}
+         ${misc:Depends},
 Description: library for handling IMAP data - development files
  This library provides an API for handling data received from IMAP services.
  IMAP (Internet Message Access Protocol) is one of the two most prevalent
