--- a/debian/control
+++ b/debian/control
@@ -3,18 +3,18 @@ Section: libs
 Priority: optional
 Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
-Build-Depends: cmake (>= 2.8.12~),
+Build-Depends: cmake (>= 3.0~),
                debhelper (>= 9),
-               extra-cmake-modules (>= 5.23.0~),
+               extra-cmake-modules (>= 5.35.0~),
                libboost-dev (>= 1.34.0~),
-               libkf5coreaddons-dev (>= 5.23.0~),
-               libkf5i18n-dev (>= 5.23.0~),
+               libkf5coreaddons-dev (>= 5.35.0~),
+               libkf5i18n-dev (>= 5.35.0~),
                libkf5kdelibs4support-dev (>= 5.12.0~),
-               libkf5kio-dev (>= 5.23.0~),
+               libkf5kio-dev (>= 5.35.0~),
                libkf5mime-dev (>= 15.12~),
                libsasl2-dev,
                pkg-kde-tools (>> 0.15.15),
-               qtbase5-dev,
+               qtbase5-dev (>= 5.7.0~),
 Standards-Version: 4.0.1
 Homepage: https://projects.kde.org/projects/kde/pim/kimap
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kimap.git
@@ -26,9 +26,9 @@ Architecture: any
 Multi-Arch: foreign
 Depends: kio-dev (>= 5.23.0~),
          libboost-dev (>= 1.34.0~),
-         libkf5coreaddons-dev (>= 5.23.0~),
+         libkf5coreaddons-dev (>= 5.35.0~),
          libkf5imap5 (= ${binary:Version}),
-         libkf5mime-dev (>= 5.3.1~),
+         libkf5mime-dev (>= 5.6.0~),
          libsasl2-dev,
          ${misc:Depends},
 Description: library for handling IMAP data - development files
