--- a/debian/control
+++ b/debian/control
@@ -37,6 +37,7 @@ Description: library for handling IMAP data - development files
  Internet standard protocols for e-mail retrieval.
  .
  This package contains the development files.
+Breaks: libkf5pimcommon-dev (<< 4:17.08)
 
 Package: libkf5imap5
 Architecture: any
@@ -44,6 +45,8 @@ Multi-Arch: same
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Breaks: kde-l10n-ast (<< 4:17.03.90-0~),
         kde-l10n-eo (<< 4:17.03.90-0~),
+        kdepim-runtime (<< 4:17.08),
+        libkf5pimcommon5 (<< 4:17.08),
         ${kde-l10n:all},
 Replaces: kde-l10n-ast (<< 4:17.03.90-0~),
           kde-l10n-eo (<< 4:17.03.90-0~),
