--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/kimap.git
 Package: libkf5imap-dev
 Section: libdevel
 Architecture: any
-Multi-Arch: foreign
+Multi-Arch: same
 Depends: kio-dev (>= 5.23.0~),
          libboost-dev (>= 1.34.0~),
          libkf5coreaddons-dev (>= 5.35.0~),
