--- a/debian/control
+++ b/debian/control
@@ -22,9 +22,7 @@ Package: libkf5imap-dev
 Section: libdevel
 Architecture: any
 Multi-Arch: same
-Depends: kio-dev (>= 5.23.0~),
-         libboost-dev (>= 1.34.0~),
-         libkf5coreaddons-dev (>= 5.35.0~),
+Depends: libkf5coreaddons-dev (>= 5.35.0~),
          libkf5imap5 (= ${binary:Version}),
          libkf5mime-dev (>= 17.08.3~),
          libsasl2-dev,
